[gd_scene load_steps=3 format=2]

[ext_resource path="res://World/Daily Quests/NoticeBoardArea.gd" type="Script" id=1]

[sub_resource type="CapsuleShape2D" id=1]
radius = 41.0
height = 44.0

[node name="NoticeBoard" type="Area2D"]
pause_mode = 2
script = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
rotation = 1.5708
shape = SubResource( 1 )

[connection signal="body_entered" from="." to="." method="_on_NoticeBoard_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_NoticeBoard_body_exited"]
